# ORGA

./: .gitignore  404.html  index.html  pyproject.toml  readme.md  search.json  zensical.toml
.github/workflows/: actions.yaml
c/: Requirements.md
c/docs/: naming_conventions.md
c/docs/general/: index.html
c/docs/home/: index.html
c/docs/naming_conventions/: index.html
c/docs/setup/: linux.md  macos.md  windows.md
c/docs/tooling_and_compiler/: index.html
c/example/: makefile
c/example/include/: public_api.h
c/example/src/: example.c
docs/: index.md
docs/c/docs/: general.md  home.md  naming_conventions.md  (+2 more)
docs/git/: basics.md  branch_model.md  cheatsheet.md  home.md  readme.md  rules.md  setup.md  troubleshooting.md  workflow.md
docs/writing/: c_api_documentation.md  common_mistakes.md  general_writing_guidelines.md  home.md  important.md  normative_language.md  readme.md  verification_strategy.md
git/: basics.md  branching_and_workflow.md  cheatsheet.md  troubleshooting.md
git/basics/: index.html
git/branch_model/: index.html
git/cheatsheet/: index.html
git/home/: index.html
git/rules/: index.html
git/setup/: index.html
git/troubleshooting/: index.html
git/workflow/: index.html
scripts/: tasks.py
writing/: readme.md
writing/c_api_documentation/: index.html
writing/common_mistakes/: index.html
writing/general_writing_guidelines/: index.html
writing/home/: index.html
writing/important/: index.html
writing/normative_language/: index.html
writing/readme/: index.html
writing/verification_strategy/: index.html
(+18 files in other folders)
